# hash-utils

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
benchmarks/: bench.py  bench_mix.py
hash_utils/: __init__.py  _core.py  _fnv64.c
tests/: test_hash_utils.py
